# sdxjs

./: .gitignore  .nojekyll  CODE_OF_CONDUCT.md  CONDUCT.md  CONTRIBUTING.md  Gemfile  LICENSE.md  Makefile  README.md  _bib.yml  _config.mk  _config.yml  _gloss.yml  _links.yml  _rules.mk  _words.txt  authors.md  bib.md  bib.yml  build.yaml  build.yml  common.mk  common.yml  config.py  config.yml  examples.mk  gloss-vol1.md  gloss.md  gloss.yml  glossary.md  index.html  index.md  keypoints.md  links.md  links.yml  local.mk  mccole.mk  mccole.yml  package-lock.json  package.json  (+13 more)
_data/: authors.yml  bibliography.bib  bibliography.yml  extras.yml  glossary.yml  index.yml  lessons.yml  links.yml  long-links.yml  numbering.yml  spelling.txt  spelling.yml  standards.yml  terms.yml  thanks.yml
_extras/: links.md
_inc/: code.html  contents.html  erase.html  foot.html  head.html  html.html  keeperase.html  multi.html  navbar.html  navlist.html  raw.html  slice.html
_includes/: cite.md  contents  contributing.md  erase  exercises.html  figref.md  figure  figure.html  file  file.md  filelink  foot.html  footer.html  get_clean  head.html  header.html  html.html  interpolate.md  intro.md  keep  keeperase  keypoints.html  keypoints.md  linecount  links.md  mathjax.html  multi  nav.html  navbar.html  navlink.html  navlist.html  numbering.html  problems.md  recent.html  settings.html  sources.html  table  terms.html  thanks.html  title.html  (+3 more)
_layouts/: default.html  page.html
_leanpub/: stjs-cover.key  stjs-embed.html
_lulu/: blurb.txt  convert.sh
_site/: index.html
(+2912 files in other folders)
