[project]
name = "sdxjs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mccole>=2.3.0",
]

[tool.mccole]
title = "Software Design by Example"
repo = "https://github.com/gvwilson/sdxjs"
skips = [
    "**/.pytest_cache",
    "**/__pycache__",
    "*.as",
    "*.bck",
    "*.dot",
    "*.ht",
    "*.mx",
    "*.slice.out",
    "*.tll",
    "bin/**",
    "static/**",
    "x-*",
]
